[package]
name = "interleaved-ordered"
description = "Combine two ordered iterators into one"
version = "0.1.1"
authors = ["Robert Habermeier <rphmeier@gmail.com>"]
repository = "https://github.com/rphmeier/interleaved-ordered"
documentation = "https://docs.rs/interleaved-ordered"
license = "MIT"

[dependencies]
